	PR binutils/10492 	* elf.c (sym_is_global): Return true even for BSF_GNU_UNIQUE 	symbols. 	* elf32-mips.c (mips_elf_sym_is_global): Likewise. 	* elfn32-mips.c (mips_elf_sym_is_global): Likewise.